--- a/MobillersApp/MobillersApp.csproj
+++ b/MobillersApp/MobillersApp.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEditor">
+      <HintPath>..\..\..\..\..\..\..\Program Files\Unity\Hub\Editor\2019.1.10f1\Editor\Data\Managed\UnityEditor.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine">
       <HintPath>..\..\..\..\..\..\..\Program Files\Unity\Hub\Editor\2019.1.10f1\Editor\Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
@@ -59,6 +62,7 @@
     <Compile Include="UI\Animations\SlideAnimation.cs" />
     <Compile Include="UI\Animations\UIAnimation.cs" />
     <Compile Include="Dependencies\DOTween\ShortcutExtensions46.cs" />
+    <Compile Include="UI\Editor Utilities\AppScreenGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
