Made the "App Menu" Available Only While in the Home Screen

--- a/MobillersApp/MobillersApp.csproj
+++ b/MobillersApp/MobillersApp.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)$(TargetFileName)" "C:\Users\PC01\Documents\Unity Projects\App Navigation Library\Assets\_Dependencies\MobillersApp"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetDir)$(TargetFileName)" "C:\Users\PC01\Documents\Unity Projects\App Navigation Library\Assets\_Dependencies\MobillersApp"
+copy "$(TargetDir)$(TargetName).pdb" "C:\Users\PC01\Documents\Unity Projects\App Navigation Library\Assets\_Dependencies\MobillersApp"</PostBuildEvent>
   </PropertyGroup>
 </Project>
