--- a/MobillersApp/MobillersApp.csproj
+++ b/MobillersApp/MobillersApp.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MobillersApp</RootNamespace>
     <AssemblyName>MobillersApp</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,19 +23,25 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <LangVersion>7.1</LangVersion>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;UNITY_2019_1_OR_NEWER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <LangVersion>7.1</LangVersion>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DOTween">
-      <HintPath>..\Dependencies\Demigiant\DOTween\dlls\DOTween.dll</HintPath>
+    <Reference Include="DOTween, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\External Dependencies\Demigiant\DOTween\dlls\DOTween.dll</HintPath>
+    </Reference>
+    <Reference Include="Firebase.Auth">
+      <HintPath>..\External Dependencies\Firebase\Plugins\Firebase.Auth.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,8 +51,20 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Unity.Tasks">
+      <HintPath>..\External Dependencies\Parse\Plugins\dotNet45\Unity.Tasks.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>..\External Dependencies\TMPro\dlls\Unity.TextMeshPro.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TextMeshPro.Editor">
+      <HintPath>..\External Dependencies\TMPro\dlls\Unity.TextMeshPro.Editor.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>..\..\..\..\..\..\..\Program Files\Unity\Hub\Editor\2019.1.10f1\Editor\Data\Managed\UnityEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.UI">
+      <HintPath>..\..\..\..\..\..\..\Program Files\Unity\Hub\Editor\2019.1.10f1\Editor\Data\UnityExtensions\Unity\GUISystem\Editor\UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
       <HintPath>..\..\..\..\..\..\..\Program Files\Unity\Hub\Editor\2019.1.10f1\Editor\Data\Managed\UnityEngine.dll</HintPath>
@@ -55,6 +74,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App Management\AppManager.cs" />
+    <Compile Include="UI\App Screens\LogInScreen.cs" />
+    <Compile Include="UI\App Screens\SignUpScreen.cs" />
     <Compile Include="UI\Core Structure\AppMenu.cs" />
     <Compile Include="UI\Core Structure\AppNavigator.cs" />
     <Compile Include="UI\Core Structure\AppScreen.cs" />
@@ -62,12 +84,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Animations\SlideAnimation.cs" />
     <Compile Include="UI\Animations\UIAnimation.cs" />
-    <Compile Include="Dependencies\DOTween\ShortcutExtensions46.cs" />
+    <Compile Include="_Dependencies\DOTween\ShortcutExtensions46.cs" />
     <Compile Include="UI\Editor Utilities\AppScreenGenerator.cs" />
+    <Compile Include="App Management\UserAuthenticator.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetDir)$(TargetFileName)" "C:\Users\PC01\Documents\Unity Projects\App Navigation Library\Assets\_Dependencies\MobillersApp"
